api: sort keys
